# openapi-python-sdk

./: .gitignore  README.md  example.py  pem_generate.sh  private.pem  public.pem  pyproject.toml  setup.py
example/: example.py  market_api.md  market_example.py  option_example.py  optmarket_api.md  push_example.py  rwa_example.py
fsopenapi/: __init__.py  auth.py  client.py  crypto.py  exceptions.py  lang.py  logging_utils.py
fsopenapi/api/: account.py  market.py  market_push.py  optmarket.py  portfolio.py  rwa.py  session.py  trade.py  wealth.py
fsopenapi/api/proto/: __init__.py  calc.proto  calc_pb2.py  push.proto  push_pb2.py
